cpp/test/Slice/errorDetection/WrongProxyType.ice
// **********************************************************************
//
// Copyright (c) 2001
// MutableRealms, Inc.
// Huntsville, AL, USA
//
// All Rights Reserved
//
// **********************************************************************

vector<int> Vector;

interface I
{
    Vector* f1();
    void f2(Vector*);
    void f3(;Vector*);
};
